testing/Travis/testcases/TypeChecker/shouldPass/CompositionISA_SiblingBC.adl
CONTEXT CompositionISA_SiblingBC IN ENGLISH

PURPOSE CONTEXT CompositionISA_SiblingBC
{+ Test composition with sibling ISA types (A and B both subtypes of C).
   Given A ISA C and B ISA C, test r[W*B];s[C*Z] where join(B,C) = C exists.
   This should PASS because the type checker can find join C. +}

CLASSIFY A ISA C
CLASSIFY B ISA C

RELATION r[W*B]
RELATION s[C*Z]
RELATION result[W*Z]

RULE testCompositionISASibling: result = r;s

ENDCONTEXT
